[gd_scene load_steps=5 format=3 uid="uid://8mcs68hhsnug"]

[ext_resource type="Script" uid="uid://dxngyqdhchio2" path="res://StoryEvents/story_event_display.gd" id="1_gtd4a"]
[ext_resource type="Script" uid="uid://ckf7oqtj1e72q" path="res://StoryEvents/dialog_box.gd" id="2_hbgmf"]
[ext_resource type="Resource" uid="uid://di4id81lti10m" path="res://StoryEvents/EventCache/Outlaws.tres" id="3_bg2dx"]
[ext_resource type="PackedScene" uid="uid://dq587ufv1bnf8" path="res://StoryEvents/ChoiceButton.tscn" id="3_q4lvn"]

[node name="StoryEventDisplay" type="Control"]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_gtd4a")
choiceButton = ExtResource("3_q4lvn")
storyEventData = ExtResource("3_bg2dx")

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -208.0
offset_top = -165.0
offset_right = 208.0
offset_bottom = 154.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer"]
layout_mode = 2

[node name="PanelContainer" type="PanelContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer/MarginContainer/VBoxContainer/PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 4
theme_override_constants/margin_top = 0
theme_override_constants/margin_right = 4
theme_override_constants/margin_bottom = 4

[node name="StoryEventLabel" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/PanelContainer/MarginContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Story Event Name!"

[node name="DialogBox" type="RichTextLabel" parent="PanelContainer/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
text = "Description of event
"
script = ExtResource("2_hbgmf")

[node name="ChoiceList" type="VBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 8

[node name="ChoiceButton" parent="PanelContainer/MarginContainer/VBoxContainer/ChoiceList" instance=ExtResource("3_q4lvn")]
layout_mode = 2

[node name="ChoiceButton2" parent="PanelContainer/MarginContainer/VBoxContainer/ChoiceList" instance=ExtResource("3_q4lvn")]
layout_mode = 2

[node name="ChoiceButton3" parent="PanelContainer/MarginContainer/VBoxContainer/ChoiceList" instance=ExtResource("3_q4lvn")]
layout_mode = 2
